# dpc-sycl

./: CMakeLists.txt  README.md  conanfile.txt  example.cpp  install.sh  path_set.sh  requirements.sh
app/: CMakeLists.txt  main.cpp
include/ising/: energy.h  hash.hpp  qubo.hpp
src/: CMakeLists.txt  energy.cpp  qubo.cpp
tests/: CMakeLists.txt  main.cpp  sat_test.cpp
